--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ django-countries = "*"
 django-seed = "*"
 django-dotenv = "*"
 requests = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.7"
