--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ django-seed = "*"
 django-dotenv = "*"
 requests = "*"
 psycopg2 = "*"
+sentry-sdk = "==0.13.2"
 
 [requires]
 python_version = "3.7"
