--- a/.ebextensions/02-django.config
+++ b/.ebextensions/02-django.config
@@ -8,6 +8,8 @@ container_commands:
     command: "django-admin createsu"
   04_collectstatic:
     command: "django-admin collectstatic --noinput"
+  05_seed:
+    command: "django-admin seed_users --number 150 && django-admin seed_rooms --number 150 && django-admin seed_facilities --number 10 && django-admin seed_amenities --number 10"
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: config/wsgi.py
