--- a/.ebextensions/02-django.config
+++ b/.ebextensions/02-django.config
@@ -3,13 +3,9 @@ container_commands:
     command: "django-admin migrate"
     leader_only: true
   02_compilemessages:
-    command: "django-admin compilemessages"
-  03_createsu:
-    command: "django-admin createsu"
-  04_collectstatic:
-    command: "django-admin collectstatic --noinput"
+    command: "django-admin compilemessages"  
   05_seed:
-    command: "django-admin seed_facilities --number 10 && django-admin seed_amenities --number 10 && django-admin seed_rooms --number 150"
+    command: "django-admin seed_facilities && django-admin seed_amenities --number 10 && django-admin seed_rooms --number 150"
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: config/wsgi.py
