--- a/.ebextensions/02-django.config
+++ b/.ebextensions/02-django.config
@@ -3,7 +3,9 @@ container_commands:
     command: "django-admin migrate"
     leader_only: true
   02_compilemessages:
-    command: "django-admin compilemessages"
+    command: "django-admin compilemessages"  
+  05_seed:
+    command: "django-admin seed_reviews --number 500"
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: config/wsgi.py
