--- a/.ebextensions/02-django.config
+++ b/.ebextensions/02-django.config
@@ -5,7 +5,7 @@ container_commands:
   02_compilemessages:
     command: "django-admin compilemessages"  
   05_seed:
-    command: "django-admin seed_reviews --number 500"
+    command: "django-admin seed_avatars"
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: config/wsgi.py
