--- a/requirements.txt
+++ b/requirements.txt
@@ -32,5 +32,5 @@ sentry-sdk==0.13.2
 six==1.13.0
 sqlparse==0.3.0
 text-unidecode==1.3
-psycopg2==2.8
+psycopg2-binary==2.8.4
 urllib3==1.25.7 ; python_version >= '3.4'
